<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.futeboldospais.futeboldospais.controller.ClassificacaoGeralFragment">

    <ScrollView
        android:id="@+id/scroll_classificacao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/painel_esq"
                android:layout_width="155dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/titulo_tabela_esq"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/borda_inferior"
                    android:orientation="horizontal"
                    android:textColor="@color/grayLight">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:text="@string/lbl_equipe" />

                </LinearLayout>

                <ListView
                    android:id="@+id/classificacao_tabela_esq"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/titulo_tabela_esq"
                    android:fastScrollEnabled="false"
                    android:scrollbars="none" />

            </RelativeLayout>

            <HorizontalScrollView
                android:id="@+id/painel_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/painel_esq">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/titulo_tabela_dir"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="@drawable/borda_inferior"
                        android:orientation="horizontal"
                        android:textColor="@color/grayLight">

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:gravity="center"
                            android:text="@string/lbl_pontos_ganhos_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_jogos_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_vitorias_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_empate_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_derrota_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_golsPro_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_golsContra_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_saldo_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_c_amarelos_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_c_vermelhos_sigla" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/lbl_pontos_disciplinares_sigla" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/classificacao_tabela_dir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/titulo_tabela_dir"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:fastScrollEnabled="false"
                        android:scrollbars="none" />

                </RelativeLayout>

            </HorizontalScrollView>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
