<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.futeboldospais.futeboldospais.util.ModalConfiguracao">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-5dp"
        android:background="@color/white"
        android:focusable="false"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lbl_opcoes"
                android:textSize="16sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_regulamento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_bt_regulamento"/>

    <Button
        android:id="@+id/btn_termos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_bt_termos"/>

    <Button
        android:id="@+id/btn_politica"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_bt_politica"/>

    <Button
        android:id="@+id/btn_licencas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_bt_licencas"/>

    <Button
        android:id="@+id/btn_sobre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/lbl_bt_sobre"/>
</LinearLayout>
</ScrollView>