<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/pai"
    tools:activity="br.com.futeboldospais.futeboldospais.controller.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:onClick="onClickView">

        <LinearLayout
            android:id="@+id/div1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="false"
            android:layout_marginBottom="200dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:src="@drawable/futeboldospais" />

            <TextView
                android:id="@+id/lbl_campeonato"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorPrimary2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_homenageado"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text=""
                android:textColor="@color/colorPrimary2"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_dados_locais"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/lbl_prosseguir"
            android:drawableEnd="@drawable/ic_prosseguir"
            android:textSize="10sp"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/transparent"
            android:layout_marginBottom="100dp"
            android:layout_above="@id/div1"
            android:layout_alignParentEnd="true"
            android:onClick="prosseguirSemAtualizar"/>

        <LinearLayout
            android:id="@+id/div4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_ultima_atualizacao_esq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:text="@string/lbl_ultima_atualizacao"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lbl_ultima_atualizacao_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/div2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/div4">

            <Button
                android:id="@+id/btn_tentar_novamente"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/lbl_tentar_novamente"
                android:textSize="10sp"
                android:padding="5dp"
                android:drawableEnd="@drawable/ic_tentar_novamente"
                android:background="@color/transparent"
                android:onClick="tentarNovamente"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/div3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/div4"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lbl_tentando_verificar_atualizacao" />

            <ProgressBar
                android:id="@+id/timer"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateBehavior="repeat"
                android:indeterminateDuration="10" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
